--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
-  "name": "prettier-config",
+  "name": "saschazengler-prettier-config",
   "version": "1.0.0",
   "description": "Config file for Prettier",
   "main": "",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
+  "keywords": [
+    "prettier",
+    "config"
+  ],
   "author": "Sascha Zengler",
   "license": "ISC"
 }
