--- a/package.json
+++ b/package.json
@@ -1,15 +1,28 @@
 {
-  "name": "saschazengler-prettier-config",
+  "name": "prettier-config",
   "version": "1.0.0",
   "description": "Config file for Prettier",
+  "homepage": "https://github.com/saschazengler/prettier_config",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/saschazengler/prettier_config"
+  },
+  "bugs": {
+    "url": "https://github.com/saschazengler/prettier_config/issues",
+    "email": "sascha@bayside.software"
+  },
   "main": "",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
     "prettier",
-    "config"
+    "config",
+    "prettierconfig"
   ],
   "author": "Sascha Zengler",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "prettier": "2.4.1"
+  }
 }
